# dashpod_connector

./: .gitignore  LICENSE.MD  README.md  pubspec.yaml
spec/: openapi.yaml
updater/: .gitignore  CMakeLists.txt  openapi.yaml
updater/include/dashpod/: dart.h  engine.h  export.h
updater/patch/: CMakeLists.txt  README.md
updater/patch/include/dashpod_patch/: patch.h
updater/patch/src/: make_patch.cpp  patch_main.cpp  string_patch_main.cpp
updater/spec/: openapi.yaml
updater/src/api/: common.cpp  common.h  dart.cpp  engine.cpp
updater/src/cache/: disk_io.cpp  disk_io.h  lifecycle.cpp  lifecycle.h  signing.cpp  signing.h  updater_state.cpp  updater_state.h
updater/src/core/: config.cpp  config.h  error.h  inflate.cpp  inflate.h  updater.cpp  updater.h  updater_lock.cpp  updater_lock.h  yaml.cpp  yaml.h
updater/src/io/: c_file.cpp  c_file.h  read_seek.h
updater/src/net/: events.cpp  events.h  network.cpp  network.h
updater/src/platform/: android.cpp  android.h
updater/src/util/: logging.cpp  logging.h  time.cpp  time.h
updater/tests/: CMakeLists.txt  main.cpp  test_android.cpp  test_inflate.cpp  test_lifecycle.cpp  test_network.cpp  test_patch.cpp  test_signing.cpp
